
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_14__ TYPE_5__ ;
typedef struct TYPE_13__ TYPE_4__ ;
typedef struct TYPE_12__ TYPE_3__ ;
typedef struct TYPE_11__ TYPE_2__ ;
typedef struct TYPE_10__ TYPE_1__ ;


typedef scalar_t__ u_long ;
struct TYPE_14__ {int e_shstrndx; } ;
struct TYPE_13__ {scalar_t__ r_offset; int r_info; } ;
struct TYPE_12__ {scalar_t__ sh_type; int sh_link; scalar_t__ sh_name; } ;
struct TYPE_11__ {scalar_t__ st_name; } ;
struct TYPE_10__ {int d_size; scalar_t__ d_buf; } ;
typedef int Elf_Scn ;
typedef TYPE_1__ Elf_Data ;
typedef int Elf32_Word ;
typedef TYPE_2__ Elf32_Sym ;
typedef TYPE_3__ Elf32_Shdr ;
typedef TYPE_4__ Elf32_Rela ;
typedef TYPE_5__ Elf32_Ehdr ;
typedef int Elf ;


 int ELF32_R_SYM (int ) ;
 int ELF_C_READ ;
 int EV_CURRENT ;
 int O_RDONLY ;
 int PLT_SYMBOL ;
 scalar_t__ SHT_RELA ;
 int close (int) ;
 TYPE_5__* elf32_getehdr (int *) ;
 TYPE_3__* elf32_getshdr (int *) ;
 int * elf_begin (int,int ,int ) ;
 int elf_end (int *) ;
 TYPE_1__* elf_getdata (int *,TYPE_1__*) ;
 int * elf_getscn (int *,int ) ;
 int * elf_nextscn (int *,int *) ;
 char* elf_strptr (int *,int ,size_t) ;
 int elf_version (int ) ;
 int elferr () ;
 int exit (int) ;
 int fprintf (int ,char*,char*) ;
 int open (char*,int ) ;
 int perror (char*) ;
 char* prog ;
 int stderr ;
 int strcmp (char*,char*) ;
 scalar_t__ symval (char*,int ) ;

u_long
plt_offset(char *lib, char *func)
{
int fd;
Elf *elf;
Elf_Scn *scn = (Elf_Scn *)0;
Elf_Data *dp;
Elf32_Ehdr *ehdr;
Elf32_Rela *relocp = (Elf32_Rela *)0;
Elf32_Word pltsz = 0;
Elf32_Shdr *shdr;
Elf_Scn *symtab;
Elf32_Sym *symbols;
char *np;
u_long offset = 0;
u_long plt;

fd = open(lib, O_RDONLY);
if (fd < 0) {
perror("open");
exit(1);
}


(void) elf_version(EV_CURRENT);
elf = elf_begin(fd, ELF_C_READ, 0);
if (elf == (Elf *)0)
elferr();

ehdr = elf32_getehdr(elf);
if (ehdr == (Elf32_Ehdr *)0)
elferr();





while ((scn = elf_nextscn(elf, scn))) {

shdr = elf32_getshdr(scn);
if (shdr == (Elf32_Shdr *)0)
elferr();

if (shdr->sh_type == SHT_RELA) {
np = elf_strptr(elf, ehdr->e_shstrndx, (size_t) shdr->sh_name);
if (np && !strcmp(np, ".rela.plt"))
break;
}

}

if (scn == (Elf_Scn *)0) {
fprintf(stderr, "%s: .rela.plt section not found\n", prog);
exit(1);
}

dp = elf_getdata(scn, (Elf_Data *)0);
if (dp == (Elf_Data *)0)
elferr();

if (dp->d_size == 0) {
fprintf(stderr, "%s: .rela.plt section empty\n", prog);
exit(1);
}





relocp = (Elf32_Rela *)dp->d_buf;
pltsz = dp->d_size / sizeof (*relocp);

relocp += 4;
pltsz -= 4;




symtab = elf_getscn(elf, shdr->sh_link);
if (symtab == (Elf_Scn *)0)
elferr();

shdr = elf32_getshdr(symtab);
if (shdr == (Elf32_Shdr *)0)
elferr();

dp = elf_getdata(symtab, (Elf_Data *)0);
if (dp == (Elf_Data *)0)
elferr();

if (dp->d_size == 0) {
fprintf(stderr, "%s: dynamic symbol table empty\n", prog);
exit(1);
}

symbols = (Elf32_Sym *)dp->d_buf;





while (pltsz-- > 0) {
Elf32_Word ndx = ELF32_R_SYM(relocp->r_info);

np = elf_strptr(elf, shdr->sh_link, (size_t)
symbols[ndx].st_name);
if (np && !strcmp(np, func))
break;

relocp++;
}

if (relocp) {
plt = symval(lib, PLT_SYMBOL);
offset = relocp->r_offset - plt;
}

(void) elf_end(elf);
(void) close(fd);

return (offset);
}
